# longtext-pipeline

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.general.yaml  config.relationship.yaml  docker-compose.yaml  longtext.py  plan.md  pyproject.toml  sample_input.txt  test_input.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md  CONFIG.md  DATA_MODEL.md  MULTI_AGENT_PLAN.md  README.md  SPEC.md
examples/: README.md  config.default.yaml  config.general.yaml  config.multi_agent.yaml  config.performance_test.yaml  config.relationship.yaml
examples/sample_input/: input.txt
scripts/: create_docx_fixtures.py  create_pdf_fixtures.py
src/longtext_pipeline/: __init__.py  cli.py  config.py  grouper.py  logging_utils.py  manifest.py  models.py  renderer.py  splitter.py  token_estimator.py
src/longtext_pipeline/batch/: __init__.py  orchestrator.py
src/longtext_pipeline/errors/: __init__.py  continuation.py
src/longtext_pipeline/llm/: __init__.py  base.py  dispatcher.py  factory.py  openai_compatible.py  progress.py  ranker.py  registry.py  result_ranker.py  results.py
src/longtext_pipeline/pipeline/: audit.py  audit_reporting.py  audit_types.py  docx_extraction.py  final_analysis.py  ingest.py  ocr_fallback.py  orchestrator.py  pdf_extraction.py  stage_synthesis.py  summarize.py
src/longtext_pipeline/prompts/: audit_general.txt  audit_relationship.txt  final_general.txt  final_relationship.txt  hallucination_detection.txt  stage_general.txt  stage_relationship.txt  summary_general.txt  summary_relationship.txt  validation.py
src/longtext_pipeline/utils/: __init__.py  batch_processor.py  batch_progress.py  hashing.py  io.py  metrics.py  process_lock.py  retry.py  text_clean.py  token_budget.py  token_estimator.py
tests/: __init__.py  conftest.py  test_audit.py  test_audit_evidence_tracing.py  test_audit_hallucination.py  test_audit_hallucination_integration.py  test_audit_quality_scoring.py  test_audit_stage_integration.py  test_batch_orchestrator_sequential.py  test_batch_processor_additional.py  test_batch_progress.py  test_batch_resume_checkpoint.py  test_cli_batch.py  test_cli_init.py  test_config.py  test_config_migration.py  test_config_output_dir.py  test_docx_extraction_unit.py  test_e2e_smoke.py  test_f3_performance_qa.py  test_grouper.py  test_ingest_stage_unit.py  test_integration.py  test_llm.py  test_llm_async.py  test_llm_mock_server.py  test_logging_config.py  test_manifest.py  test_metrics.py  test_multi_agent.py  test_multi_provider_dispatcher.py  test_ocr_fallback.py  test_ocr_fallback_unit.py  test_openai_compatible_regressions.py  test_orchestrator_helpers.py  test_orchestrator_paths.py  test_orchestrator_resume.py  test_output_dir_integration_across_stages.py  test_pdf_extraction_unit.py  test_pipeline_e2e.py  (+12 more)
tests/fixtures/: README.md
tests/fixtures/audit_cases/: TEST_CASES.md  citation_high_01.json  citation_medium_01.json  contradiction_high_01.json  factual_high_01.json  factual_medium_01.json  numerical_low_01.json  numerical_medium_01.json  overreach_high_01.json
(+16 files in other folders)
