[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longtext-pipeline"
version = "0.1.1"
description = "A Python CLI tool for hierarchical analysis of super-long texts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "longtext-pipeline Team", email = "TomSunSoya@users.noreply.github.com"}
]
requires-python = ">=3.10"
keywords = ["llm", "cli", "summarization", "long-context", "analysis", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "prometheus_client>=0.19.0",
    "pdfplumber>=0.10.0",
    "python-docx>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.4.0",
    # Additional packages for OCR support
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/TomSunSoya/longtext-pipeline"
Repository = "https://github.com/TomSunSoya/longtext-pipeline"
Issues = "https://github.com/TomSunSoya/longtext-pipeline/issues"
Changelog = "https://github.com/TomSunSoya/longtext-pipeline/blob/master/CHANGELOG.md"

[project.scripts]
longtext = "longtext_pipeline.cli:app"

[tool.setuptools.package-data]
longtext_pipeline = ["prompts/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/longtext_pipeline"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
show_error_codes = true
pretty = true
